ckad/wear-online-store/ingress-wear-watch-v2.yaml
apiVersion: "networking.k8s.io/v1beta1"
kind: Ingress
metadata:
  name:
    ingress-wear-watch
spec:
  rules:
    - host: wear.my-online-store.com
      http:
        paths:
          - backend:
              serviceName: wear-service
              servicePort: 80

    - host: watch.my-online-store.com
      http:
       paths:
         - backend:
             serviceName: watch-service
             servicePort: 80
