ckad/wear-online-store/ingress-wear.yaml
apiVersion: "networking.k8s.io/v1beta1"
kind: Ingress
metadata:
  name: ingress-wear
spec:
  backend:
    serviceName: wear-service
    servicePort: 80
